--- a/src/components/Controls/Input/styles.scss
+++ b/src/components/Controls/Input/styles.scss
@@ -1,72 +1,69 @@
 @import 'themes/colors.scss';
 
-.btn-input-container {
-	input[type='file'] {
+.input-file {
+	&_container {
+		display: flex;
+		align-items: center;
+	}
+
+	&_input {
 		display: none;
 	}
-}
 
-.btn-input {
-	line-height: 1.499;
-	position: relative;
-	display: inline-block;
-	font-weight: 400;
-	white-space: nowrap;
-	text-align: center;
-	border: 0.0625rem solid transparent;
-	box-shadow: 0 0.125rem 0 rgba(#000, 0.015);
-	cursor: pointer;
-	transition: all 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
-	user-select: none;
-	touch-action: manipulation;
-	height: 2rem;
-	padding: 0 0.9375rem;
-	font-size: 0.875rem;
-	border-radius: 0.25rem;
-	color: rgba(#000, 0.65);
-	background-color: transparent;
-	border-color: $alto;
-
-	& > i + span,
-	& > span + i {
-		margin-left: 0.5rem;
-	}
-
-	&,
-	&:active,
-	&:focus {
-		outline: 0;
-	}
-
-	&:hover,
-	&:focus {
-		color: $dodger-blue;
-		border-color: currentColor;
-	}
-
-	&:active {
-		color: $science-blue;
-		border-color: currentColor;
-	}
-
-	&:hover,
-	&:focus,
-	&:active {
-		text-decoration: none;
-		background-color: transparent;
-	}
-}
-
-span.input-log {
-	color: rgba(#000, 0.65);
-}
-
-.input {
-	display: flex;
-	align-items: center;
-
-	span.input-log {
+	&_log {
 		margin-left: 0.5rem;
 		font-size: 0.875em;
+		color: var(--black-65);
+	}
+
+	&_button {
+		line-height: 1.499;
+		position: relative;
+		display: inline-block;
+		font-weight: 400;
+		white-space: nowrap;
+		text-align: center;
+		border: 0.0625rem solid transparent;
+		box-shadow: 0 0.125rem 0 rgba(#000, 0.015);
+		cursor: pointer;
+		transition: all 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+		user-select: none;
+		touch-action: manipulation;
+		height: 2rem;
+		padding: 0 0.9375rem;
+		font-size: 0.875rem;
+		border-radius: 0.25rem;
+		color: var(--black-65);
+		background-color: transparent;
+		border-color: var(--alto);
+
+		& > i + span,
+		& > span + i {
+			margin-left: 0.5rem;
+		}
+
+		&,
+		&:active,
+		&:focus {
+			outline: 0;
+		}
+
+		&:hover,
+		&:focus {
+			color: var(--dodger-blue);
+			border-color: currentColor;
+		}
+
+		&:active {
+			color: var(--science-blue);
+			border-color: currentColor;
+		}
+
+		&:hover,
+		&:focus,
+		&:active {
+			text-decoration: none;
+			background-color: transparent;
+		}
 	}
 }
