--- a/src/components/ThemeSwitcher/styles.scss
+++ b/src/components/ThemeSwitcher/styles.scss
@@ -11,183 +11,183 @@
 	&:hover {
 		opacity: 1;
 	}
-}
 
-label.toggle-switch {
-	background-color: $anakiwa;
-	border-radius: 5.25rem;
-	cursor: pointer;
-	display: inline-block;
-	height: 3.125rem;
-	position: relative;
-	transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-	width: 5.625rem;
+	&_toggle {
+		background-color: var(--anakiwa);
+		border-radius: 5.25rem;
+		cursor: pointer;
+		display: inline-block;
+		height: 3.125rem;
+		position: relative;
+		transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+		width: 5.625rem;
 
-	&.-checked {
-		background-color: $san-marino;
-	}
-}
-
-.toggle-knob {
-	background-color: $peach-orange;
-	border-radius: 50%;
-	box-shadow: 0 0.125rem 0.375rem rgba(#000, 0.3);
-	display: inline-block;
-	position: relative;
-	top: 0.1875rem;
-	left: 0.1875rem;
-	transform: rotate(-45deg);
-	transition: all 400ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	height: 2.75rem;
-	width: 2.75rem;
-	z-index: 1;
-
-	> span {
-		background-color: $macaroni-and-cheese;
-		border-radius: 100%;
-		opacity: 0;
-		position: absolute;
-		transition: opacity 200ms ease-in-out;
-
-		&:nth-child(1) {
-			top: 1.125rem;
-			left: 0.625rem;
-			height: 0.25rem;
-			width: 0.25rem;
-		}
-
-		&:nth-child(2) {
-			top: 1.75rem;
-			left: 1.375rem;
-			height: 0.375rem;
-			width: 0.375rem;
-		}
-
-		&:nth-child(3) {
-			top: 0.625rem;
-			left: 1.5625rem;
-			height: 0.5rem;
-			width: 0.5rem;
+		&.-checked {
+			background-color: var(--san-marino);
 		}
 	}
-}
 
-.stars > span {
-	background-color: $white;
-	border-radius: 50%;
-	position: absolute;
-	transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
-
-	&:nth-child(1) {
-		top: 0.625rem;
-		left: 2.1875rem;
-		height: 0.1875rem;
-		width: 1.875rem;
-		z-index: 0;
-	}
-
-	&:nth-child(2) {
-		top: 1.125rem;
-		left: 1.75rem;
-		height: 0.1875rem;
-		width: 1.875rem;
+	&_craters {
+		background-color: var(--peach-orange);
+		border-radius: 50%;
+		box-shadow: 0 0.125rem 0.375rem rgba(#000, 0.3);
+		display: inline-block;
+		position: relative;
+		top: 0.1875rem;
+		left: 0.1875rem;
+		transform: rotate(-45deg);
+		transition: all 400ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+		height: 2.75rem;
+		width: 2.75rem;
 		z-index: 1;
-	}
 
-	&:nth-child(3) {
-		top: 1.6875rem;
-		left: 2.5rem;
-		height: 0.1875rem;
-		width: 1.875rem;
-		z-index: 0;
-	}
+		> span {
+			background-color: var(--macaroni-and-cheese);
+			border-radius: 100%;
+			opacity: 0;
+			position: absolute;
+			transition: opacity 200ms ease-in-out;
 
-	&:nth-child(4),
-	&:nth-child(5),
-	&:nth-child(6) {
-		opacity: 0;
-		transition: all 300ms 0 cubic-bezier(0.445, 0.05, 0.55, 0.95);
-	}
-
-	&:nth-child(4) {
-		top: 1rem;
-		left: 0.6875rem;
-		transform: translate(0.1875rem, 0);
-		height: 0.125rem;
-		width: 0.125rem;
-		z-index: 0;
-	}
-
-	&:nth-child(5) {
-		top: 2rem;
-		left: 1.0625rem;
-		transform: translate(0.1875rem, 0);
-		height: 0.1875rem;
-		width: 0.1875rem;
-		z-index: 0;
-	}
-
-	&:nth-child(6) {
-		top: 2.25rem;
-		left: 1.75rem;
-		height: 0.125rem;
-		transform: translate(0.1875rem, 0);
-		width: 0.125rem;
-		z-index: 0;
-	}
-}
-
-input.theme-switcher-input {
-	display: none;
-
-	&:checked {
-		+ .toggle-knob {
-			background-color: $peach;
-			transform: translate(2.5rem, 0) rotate(0);
-
-			> span {
-				opacity: 1;
-			}
-		}
-
-		~ .stars {
-			span:nth-child(1) {
-				height: 0.125rem;
-				width: 0.125rem;
-			}
-
-			span:nth-child(2) {
-				transform: translate(-0.3125rem, 0);
+			&:nth-child(1) {
+				top: 1.125rem;
+				left: 0.625rem;
 				height: 0.25rem;
 				width: 0.25rem;
 			}
 
-			span:nth-child(3) {
-				transform: translate(-0.4375rem, 0);
-				height: 0.125rem;
-				width: 0.125rem;
+			&:nth-child(2) {
+				top: 1.75rem;
+				left: 1.375rem;
+				height: 0.375rem;
+				width: 0.375rem;
 			}
 
-			span {
-				&:nth-child(4),
-				&:nth-child(5),
-				&:nth-child(6) {
+			&:nth-child(3) {
+				top: 0.625rem;
+				left: 1.5625rem;
+				height: 0.5rem;
+				width: 0.5rem;
+			}
+		}
+	}
+
+	&_stars > span {
+		background-color: var(--white);
+		border-radius: 50%;
+		position: absolute;
+		transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+	
+		&:nth-child(1) {
+			top: 0.625rem;
+			left: 2.1875rem;
+			height: 0.1875rem;
+			width: 1.875rem;
+			z-index: 0;
+		}
+	
+		&:nth-child(2) {
+			top: 1.125rem;
+			left: 1.75rem;
+			height: 0.1875rem;
+			width: 1.875rem;
+			z-index: 1;
+		}
+	
+		&:nth-child(3) {
+			top: 1.6875rem;
+			left: 2.5rem;
+			height: 0.1875rem;
+			width: 1.875rem;
+			z-index: 0;
+		}
+	
+		&:nth-child(4),
+		&:nth-child(5),
+		&:nth-child(6) {
+			opacity: 0;
+			transition: all 300ms 0 cubic-bezier(0.445, 0.05, 0.55, 0.95);
+		}
+	
+		&:nth-child(4) {
+			top: 1rem;
+			left: 0.6875rem;
+			transform: translate(0.1875rem, 0);
+			height: 0.125rem;
+			width: 0.125rem;
+			z-index: 0;
+		}
+	
+		&:nth-child(5) {
+			top: 2rem;
+			left: 1.0625rem;
+			transform: translate(0.1875rem, 0);
+			height: 0.1875rem;
+			width: 0.1875rem;
+			z-index: 0;
+		}
+	
+		&:nth-child(6) {
+			top: 2.25rem;
+			left: 1.75rem;
+			height: 0.125rem;
+			transform: translate(0.1875rem, 0);
+			width: 0.125rem;
+			z-index: 0;
+		}
+	}
+
+	&_input {
+		display: none;
+
+		&:checked {
+			+ .theme-switcher_craters {
+				background-color: var(--peach);
+				transform: translate(2.5rem, 0) rotate(0);
+
+				> span {
 					opacity: 1;
-					transform: translate(0, 0);
-					transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 				}
 			}
 
-			span:nth-child(4) {
-				transition-delay: 200ms;
-			}
+			~ .theme-switcher_stars {
+				span:nth-child(1) {
+					height: 0.125rem;
+					width: 0.125rem;
+				}
 
-			span:nth-child(5) {
-				transition-delay: 300ms;
-			}
+				span:nth-child(2) {
+					transform: translate(-0.3125rem, 0);
+					height: 0.25rem;
+					width: 0.25rem;
+				}
 
-			span:nth-child(6) {
-				transition-delay: 400ms;
+				span:nth-child(3) {
+					transform: translate(-0.4375rem, 0);
+					height: 0.125rem;
+					width: 0.125rem;
+				}
+
+				span {
+					&:nth-child(4),
+					&:nth-child(5),
+					&:nth-child(6) {
+						opacity: 1;
+						transform: translate(0, 0);
+						transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+					}
+				}
+
+				span:nth-child(4) {
+					transition-delay: 200ms;
+				}
+
+				span:nth-child(5) {
+					transition-delay: 300ms;
+				}
+
+				span:nth-child(6) {
+					transition-delay: 400ms;
+				}
 			}
 		}
 	}
